# testable-whitebox-python

./: .bandit  .flake8  .pylintrc  .semgrep.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: whitebox-metrics.yml
scripts/: run_all_metrics.ps1  run_all_metrics.sh  run_beniget.py  run_churn.py
src/: taxonomy-gate-5f99129a-2b1b-4d60-b21a-434b71dad2e2 (1).html  utils.py
tests/: test_auth.py  test_complex_logic.py  test_file_handler.py
