[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "testable-whitebox-python"
version = "1.0.0"
description = "Python sample repository that triggers all 103 Testable white-box metrics"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-report=html:reports/htmlcov",
    "--cov-fail-under=70",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py310"
